<resources>
    <string name="app_name">Champions</string>
    <string name="dlg_msg_payment_success">The payment was successful</string>
    <string name="IDS_SAPPS_POP_AN_ERROR_OCCURRED_WHILE_RESETTING_SAMSUNG_IN_APP_PURCHASE">An error occurred while resetting Samsung In-App Purchase.</string>
    <string name="IDS_SAPPS_POP_AN_INVALID_VALUE_HAS_BEEN_PROVIDED_FOR_SAMSUNG_IN_APP_PURCHASE">An invalid value has been provided for Samsung In-App Purchase.</string>
    <string name="IDS_SAPPS_POP_AN_UNEXPECTED_ERROR_HAS_OCCURRED_SAMSUNG_ACCOUNT_AUTHENTICATION_HAS_BEEN_CANCELLED">An unexpected error has occurred. Samsung account authentication has been cancelled.</string>
    <string name="IDS_SAPPS_POP_YOUR_PURCHASE_VIA_SAMSUNG_IN_APP_PURCHASE_IS_INVALID_A_FAKE_APPLICATION_HAS_BEEN_DETECTED_CHECK_THE_APP_MSG">Your purchase via Samsung In-App Purchase is invalid. A fake application has been detected. Check the app you are trying to purchase and try again.</string>
    <string name="IDS_SAPPS_POP_UNKNOWN_ERROR_OCCURRED">Unknown error occurred.</string>
    <string name="IDS_SAPPS_POP_SAMSUNG_IN_APP_PURCHASE">Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_SAMSUNG_IN_APP_PURCHASE_NEEDS_TO_BE_UPDATED">Samsung In-App Purchase needs to be updated.</string>
    <string name="IDS_SAPPS_POP_TO_PURCHASE_ITEMS_YOU_NEED_TO_INSTALL_SAMSUNG_IN_APP_PURCHASE_INSTALL_Q">To purchase items, you need to install Samsung In-App Purchase. Install?</string>
    <string name="IDS_SAPPS_POP_A_NEW_VERSION_OF_SAMSUNG_IN_APP_PURCHASE_IS_AVAILABLE_UPDATE_Q">A new version of Samsung In-App Purchase is available. Update?</string>
    <string name="IDS_SAPPS_BODY_WAITING_ING">Waiting...</string>
    <string name="IDS_SAPPS_POP_PRODUCT_DOES_NOT_EXIST_IN_THIS_STORE">Product does not exist in this store.</string>
    <string name="IDS_SAPPS_POP_ALREADY_PURCHASED">Already purchased.</string>
    <string name="IDS_SAPPS_POP_PAYMENT_CANCELLED">Payment cancelled.</string>
    <string name="IDS_SAPPS_POP_NETWORK_UNAVAILABLE">Network not available.</string>
    <string name="IDS_SAPPS_HEADER_ITEM_PURCHASED">Item purchased</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete. Select OK to start the movie.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="kabam_soda_accountcreate_birthday">Birthday</string>
    <string name="kabam_soda_accountcreate">Create An Account</string>
    <string name="kabam_soda_account_login_logo">Image - soda rewards account login</string>
    <string name="kabam_soda_accountrelogin">Account Re-login</string>
    <string name="kabam_soda_accountrelogin_check">Image - soda check</string>
</resources>