<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/kabam_soda_account_relogin" android:paddingLeft="36.0dip" android:paddingTop="30.0dip" android:paddingRight="36.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/kabam_soda_accountrelogin"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/kabam_soda_account_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/kabam_soda_account_logo" android:scaleType="center" android:contentDescription="@string/kabam_soda_account_login_logo" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/kabam_soda_gold" android:id="@id/kabam_soda_accountrelogin_alert" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/kabam_soda_alert" android:drawablePadding="10.0sp" />
        <LinearLayout android:orientation="vertical" android:id="@id/kabam_soda_accountrelogin_retry_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/kabam_soda_accountrelogin_progressbar" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge" />
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/kabam_soda_accountrelogin_statusline1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" />
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/kabam_soda_accountrelogin_statusline2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/kabam_soda_accountrelogin_success_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/kabam_soda_account_check" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/kabam_soda_check" android:scaleType="center" android:contentDescription="@string/kabam_soda_accountrelogin_check" />
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/kabam_soda_green" android:gravity="center" android:id="@id/kabam_soda_accountrelogin_success" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="16.0sp" android:textColor="@color/kabam_soda_white" android:id="@id/kabam_soda_accountrelogin_cancelbutton" android:background="@color/kabam_soda_account_gray" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>