<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/kabam_soda_account_box_gray" android:paddingLeft="@dimen/kabam_soda_account_box_padding_left" android:paddingTop="@dimen/kabam_soda_account_box_padding_top" android:paddingRight="@dimen/kabam_soda_account_box_padding_right" android:paddingBottom="@dimen/kabam_soda_account_box_padding_bottom" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="@dimen/kabam_soda_account_box_maxwidth" android:minWidth="@dimen/kabam_soda_account_box_minwidth" android:contentDescription="@string/kabam_soda_accountcreate"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/kabam_soda_accountlogin_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/kabam_soda_account_logo" android:scaleType="center" android:contentDescription="@string/kabam_soda_account_login_logo" />
    <EditText android:textColor="@color/kabam_soda_black" android:id="@id/kabam_soda_accountcreate_email" android:background="@color/kabam_soda_white" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:inputType="textEmailAddress" />
    <EditText android:textColor="@color/kabam_soda_black" android:id="@id/kabam_soda_accountcreate_password" android:background="@color/kabam_soda_white" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="8.0dip" android:inputType="textPassword" />
    <LinearLayout android:orientation="horizontal" android:id="@id/kabam_soda_accountcreate_birthdaylayout" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:gravity="right" android:id="@id/kabam_soda_accountcreate_birthday" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Spinner android:id="@id/kabam_soda_accountcreate_birthdayspinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/kabam_soda_accountcreate_birthday" />
    </LinearLayout>
    <CheckBox android:textSize="12.0sp" android:textColor="@color/kabam_soda_offwhite" android:layout_gravity="top" android:id="@id/kabam_soda_marketingemail_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/kabam_soda_checkbox_selector" />
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/kabam_soda_red" android:gravity="center_horizontal" android:id="@id/kabam_soda_accountcreate_error" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:textColor="@color/kabam_soda_white" android:id="@id/kabam_soda_accountcreate_button" android:background="@color/kabam_soda_orange" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="8.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <Button android:textColor="@color/kabam_soda_white" android:id="@id/kabam_soda_accountcreate_cancelbutton" android:background="@color/kabam_soda_account_gray" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_weight="0.3" />
        <Button android:textColor="@color/kabam_soda_white" android:id="@id/kabam_soda_accountcreate_haveaccountbutton" android:background="@color/kabam_soda_account_gray" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginLeft="12.0dip" android:layout_weight="0.7" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:textStyle="normal" android:textColor="@color/kabam_soda_whitegray" android:textColorLink="@color/kabam_soda_orange" android:id="@id/kabam_soda_redeem_authterms" android:paddingTop="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>